@@ -109,6 +109,31 @@
       },
       "plugins" : [
          {
+            "class" : "Dist::Zilla::Plugin::ReadmeAnyFromPod",
+            "config" : {
+               "Dist::Zilla::Role::FileWatcher" : {
+                  "version" : "0.006"
+               }
+            },
+            "name" : "Markdown_Readme",
+            "version" : "0.163250"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Regenerate::AfterReleasers",
+            "config" : {
+               "Dist::Zilla::Plugin::Regenerate::AfterReleasers" : {
+                  "plugins" : [
+                     "Markdown_Readme"
+                  ]
+               },
+               "Dist::Zilla::Role::Regenerator" : {
+                  "$Dist::Zilla::Role::Regenerator::VERSION" : "0.001001"
+               }
+            },
+            "name" : "Regenerate::AfterReleasers",
+            "version" : "0.001001"
+         },
+         {
             "class" : "Dist::Zilla::Plugin::Git::GatherDir",
             "config" : {
                "Dist::Zilla::Plugin::GatherDir" : {
@@ -130,37 +155,37 @@
                   "include_untracked" : 0
                }
             },
-            "name" : "Git::GatherDir",
+            "name" : "@Starter::Git/Git::GatherDir",
             "version" : "2.046"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaYAML",
-            "name" : "@Starter/MetaYAML",
+            "name" : "@Starter::Git/MetaYAML",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaJSON",
-            "name" : "@Starter/MetaJSON",
+            "name" : "@Starter::Git/MetaJSON",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::License",
-            "name" : "@Starter/License",
+            "name" : "@Starter::Git/License",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::Pod2Readme",
-            "name" : "@Starter/Pod2Readme",
+            "name" : "@Starter::Git/Pod2Readme",
             "version" : "0.004"
          },
          {
             "class" : "Dist::Zilla::Plugin::PodSyntaxTests",
-            "name" : "@Starter/PodSyntaxTests",
+            "name" : "@Starter::Git/PodSyntaxTests",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::Test::ReportPrereqs",
-            "name" : "@Starter/Test::ReportPrereqs",
+            "name" : "@Starter::Git/Test::ReportPrereqs",
             "version" : "0.027"
          },
          {
@@ -183,7 +208,7 @@
                   "switch" : []
                }
             },
-            "name" : "@Starter/Test::Compile",
+            "name" : "@Starter::Git/Test::Compile",
             "version" : "2.058"
          },
          {
@@ -198,22 +223,22 @@
                   "version" : "6.012"
                }
             },
-            "name" : "@Starter/MakeMaker::Awesome",
-            "version" : "0.47"
+            "name" : "@Starter::Git/MakeMaker::Awesome",
+            "version" : "0.48"
          },
          {
             "class" : "Dist::Zilla::Plugin::Manifest",
-            "name" : "@Starter/Manifest",
+            "name" : "@Starter::Git/Manifest",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::PruneCruft",
-            "name" : "@Starter/PruneCruft",
+            "name" : "@Starter::Git/PruneCruft",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::ManifestSkip",
-            "name" : "@Starter/ManifestSkip",
+            "name" : "@Starter::Git/ManifestSkip",
             "version" : "6.012"
          },
          {
@@ -223,8 +248,31 @@
                   "default_jobs" : 1
                }
             },
-            "name" : "@Starter/RunExtraTests",
+            "name" : "@Starter::Git/RunExtraTests",
             "version" : "0.029"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Git::Check",
+            "config" : {
+               "Dist::Zilla::Plugin::Git::Check" : {
+                  "untracked_files" : "die"
+               },
+               "Dist::Zilla::Role::Git::DirtyFiles" : {
+                  "allow_dirty" : [
+                     "Changes",
+                     "META.json",
+                     "dist.ini"
+                  ],
+                  "allow_dirty_match" : [],
+                  "changelog" : "Changes"
+               },
+               "Dist::Zilla::Role::Git::Repo" : {
+                  "git_version" : "2.20.1",
+                  "repo_root" : "."
+               }
+            },
+            "name" : "@Starter::Git/Git::Check",
+            "version" : "2.046"
          },
          {
             "class" : "Dist::Zilla::Plugin::RewriteVersion",
@@ -239,13 +287,100 @@
                   "skip_version_provider" : 0
                }
             },
-            "name" : "@Starter/RewriteVersion",
+            "name" : "@Starter::Git/RewriteVersion",
             "version" : "0.018"
          },
          {
             "class" : "Dist::Zilla::Plugin::NextRelease",
-            "name" : "@Starter/NextRelease",
+            "name" : "@Starter::Git/NextRelease",
             "version" : "6.012"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::CopyFilesFromRelease",
+            "config" : {
+               "Dist::Zilla::Plugin::CopyFilesFromRelease" : {
+                  "filename" : [
+                     "LICENSE",
+                     "META.json",
+                     "Makefile.PL",
+                     "README.md",
+                     "t/00-report-prereqs.t"
+                  ],
+                  "match" : []
+               }
+            },
+            "name" : "@Starter::Git/CopyFilesFromRelease",
+            "version" : "0.006"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Regenerate::AfterReleasers",
+            "config" : {
+               "Dist::Zilla::Plugin::Regenerate::AfterReleasers" : {
+                  "plugins" : [
+                     "@Starter::Git/CopyFilesFromRelease"
+                  ]
+               },
+               "Dist::Zilla::Role::Regenerator" : {
+                  "$Dist::Zilla::Role::Regenerator::VERSION" : "0.001001"
+               }
+            },
+            "name" : "@Starter::Git/Regenerate::AfterReleasers",
+            "version" : "0.001001"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Git::Commit",
+            "config" : {
+               "Dist::Zilla::Plugin::Git::Commit" : {
+                  "add_files_in" : [
+                     "/"
+                  ],
+                  "commit_msg" : "%v%n%n%c"
+               },
+               "Dist::Zilla::Role::Git::DirtyFiles" : {
+                  "allow_dirty" : [
+                     "Changes",
+                     "LICENSE",
+                     "META.json",
+                     "Makefile.PL",
+                     "README.md",
+                     "dist.ini",
+                     "t/00-report-prereqs.t"
+                  ],
+                  "allow_dirty_match" : [],
+                  "changelog" : "Changes"
+               },
+               "Dist::Zilla::Role::Git::Repo" : {
+                  "git_version" : "2.20.1",
+                  "repo_root" : "."
+               },
+               "Dist::Zilla::Role::Git::StringFormatter" : {
+                  "time_zone" : "local"
+               }
+            },
+            "name" : "@Starter::Git/Release_Commit",
+            "version" : "2.046"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Git::Tag",
+            "config" : {
+               "Dist::Zilla::Plugin::Git::Tag" : {
+                  "branch" : null,
+                  "changelog" : "Changes",
+                  "signed" : 0,
+                  "tag" : "1.012",
+                  "tag_format" : "%v",
+                  "tag_message" : "%v"
+               },
+               "Dist::Zilla::Role::Git::Repo" : {
+                  "git_version" : "2.20.1",
+                  "repo_root" : "."
+               },
+               "Dist::Zilla::Role::Git::StringFormatter" : {
+                  "time_zone" : "local"
+               }
+            },
+            "name" : "@Starter::Git/Git::Tag",
+            "version" : "2.046"
          },
          {
             "class" : "Dist::Zilla::Plugin::BumpVersionAfterRelease",
@@ -259,32 +394,77 @@
                   "munge_makefile_pl" : 1
                }
             },
-            "name" : "@Starter/BumpVersionAfterRelease",
+            "name" : "@Starter::Git/BumpVersionAfterRelease",
             "version" : "0.018"
          },
          {
+            "class" : "Dist::Zilla::Plugin::Git::Commit",
+            "config" : {
+               "Dist::Zilla::Plugin::Git::Commit" : {
+                  "add_files_in" : [],
+                  "commit_msg" : "Bump version"
+               },
+               "Dist::Zilla::Role::Git::DirtyFiles" : {
+                  "allow_dirty" : [
+                     "Changes",
+                     "dist.ini"
+                  ],
+                  "allow_dirty_match" : [
+                     "(?^:^)"
+                  ],
+                  "changelog" : "Changes"
+               },
+               "Dist::Zilla::Role::Git::Repo" : {
+                  "git_version" : "2.20.1",
+                  "repo_root" : "."
+               },
+               "Dist::Zilla::Role::Git::StringFormatter" : {
+                  "time_zone" : "local"
+               }
+            },
+            "name" : "@Starter::Git/Version_Bump_Commit",
+            "version" : "2.046"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Git::Push",
+            "config" : {
+               "Dist::Zilla::Plugin::Git::Push" : {
+                  "push_to" : [
+                     "origin"
+                  ],
+                  "remotes_must_exist" : 1
+               },
+               "Dist::Zilla::Role::Git::Repo" : {
+                  "git_version" : "2.20.1",
+                  "repo_root" : "."
+               }
+            },
+            "name" : "@Starter::Git/Git::Push",
+            "version" : "2.046"
+         },
+         {
             "class" : "Dist::Zilla::Plugin::TestRelease",
-            "name" : "@Starter/TestRelease",
+            "name" : "@Starter::Git/TestRelease",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::ConfirmRelease",
-            "name" : "@Starter/ConfirmRelease",
+            "name" : "@Starter::Git/ConfirmRelease",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::UploadToCPAN",
-            "name" : "@Starter/UploadToCPAN",
+            "name" : "@Starter::Git/UploadToCPAN",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaConfig",
-            "name" : "@Starter/MetaConfig",
+            "name" : "@Starter::Git/MetaConfig",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaNoIndex",
-            "name" : "@Starter/MetaNoIndex",
+            "name" : "@Starter::Git/MetaNoIndex",
             "version" : "6.012"
          },
          {
@@ -294,7 +474,7 @@
                   "finder_objects" : [
                      {
                         "class" : "Dist::Zilla::Plugin::FinderCode",
-                        "name" : "@Starter/MetaProvides::Package/AUTOVIV/:InstallModulesPM",
+                        "name" : "@Starter::Git/MetaProvides::Package/AUTOVIV/:InstallModulesPM",
                         "version" : "6.012"
                      }
                   ],
@@ -307,37 +487,27 @@
                   "meta_noindex" : 1
                },
                "Dist::Zilla::Role::ModuleMetadata" : {
-                  "Module::Metadata" : "1.000033",
+                  "Module::Metadata" : "1.000036",
                   "version" : "0.006"
                }
             },
-            "name" : "@Starter/MetaProvides::Package",
+            "name" : "@Starter::Git/MetaProvides::Package",
             "version" : "2.004003"
          },
          {
             "class" : "Dist::Zilla::Plugin::ShareDir",
-            "name" : "@Starter/ShareDir",
+            "name" : "@Starter::Git/ShareDir",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::ExecDir",
-            "name" : "@Starter/ExecDir",
+            "name" : "@Starter::Git/ExecDir",
             "version" : "6.012"
          },
          {
             "class" : "Dist::Zilla::Plugin::AlienBuild",
             "name" : "AlienBuild",
-            "version" : "0.26"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ReadmeAnyFromPod",
-            "config" : {
-               "Dist::Zilla::Role::FileWatcher" : {
-                  "version" : "0.006"
-               }
-            },
-            "name" : "Markdown_Readme",
-            "version" : "0.163250"
+            "version" : "0.29"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs::FromCPANfile",
@@ -368,7 +538,7 @@
             "class" : "Dist::Zilla::Plugin::Git::Contributors",
             "config" : {
                "Dist::Zilla::Plugin::Git::Contributors" : {
-                  "git_version" : "2.19.1",
+                  "git_version" : "2.20.1",
                   "include_authors" : 0,
                   "include_releaser" : 1,
                   "order_by" : "name",
@@ -382,93 +552,6 @@
             "class" : "Dist::Zilla::Plugin::GithubMeta",
             "name" : "GithubMeta",
             "version" : "0.58"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Check",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Check" : {
-                  "untracked_files" : "die"
-               },
-               "Dist::Zilla::Role::Git::DirtyFiles" : {
-                  "allow_dirty" : [
-                     "Changes",
-                     "dist.ini"
-                  ],
-                  "allow_dirty_match" : [],
-                  "changelog" : "Changes"
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.19.1",
-                  "repo_root" : "."
-               }
-            },
-            "name" : "@Git/Check",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Commit",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Commit" : {
-                  "add_files_in" : [],
-                  "commit_msg" : "v%V%n%n%c"
-               },
-               "Dist::Zilla::Role::Git::DirtyFiles" : {
-                  "allow_dirty" : [
-                     "Changes",
-                     "dist.ini"
-                  ],
-                  "allow_dirty_match" : [],
-                  "changelog" : "Changes"
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.19.1",
-                  "repo_root" : "."
-               },
-               "Dist::Zilla::Role::Git::StringFormatter" : {
-                  "time_zone" : "local"
-               }
-            },
-            "name" : "@Git/Commit",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Tag",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Tag" : {
-                  "branch" : null,
-                  "changelog" : "Changes",
-                  "signed" : 0,
-                  "tag" : "v1.012",
-                  "tag_format" : "v%V",
-                  "tag_message" : "v%V"
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.19.1",
-                  "repo_root" : "."
-               },
-               "Dist::Zilla::Role::Git::StringFormatter" : {
-                  "time_zone" : "local"
-               }
-            },
-            "name" : "@Git/Tag",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Push",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Push" : {
-                  "push_to" : [
-                     "origin"
-                  ],
-                  "remotes_must_exist" : 1
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.19.1",
-                  "repo_root" : "."
-               }
-            },
-            "name" : "@Git/Push",
-            "version" : "2.046"
          },
          {
             "class" : "Dist::Zilla::Plugin::GitHubREADME::Badge",
@@ -536,11 +619,6 @@
             "version" : "2.007005"
          },
          {
-            "class" : "Dist::Zilla::Plugin::CopyFilesFromBuild",
-            "name" : "CopyFilesFromBuild",
-            "version" : "0.170880"
-         },
-         {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":InstallModules",
             "version" : "6.012"
@@ -592,7 +670,7 @@
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : "@Starter/MetaProvides::Package/AUTOVIV/:InstallModulesPM",
+            "name" : "@Starter::Git/MetaProvides::Package/AUTOVIV/:InstallModulesPM",
             "version" : "6.012"
          }
       ],
@@ -605,7 +683,7 @@
       }
    },
    "x_alienfile" : {
-      "generated_by" : "Dist::Zilla::Plugin::AlienBuild version 0.26",
+      "generated_by" : "Dist::Zilla::Plugin::AlienBuild version 0.29",
       "requires" : {
          "share" : {
             "Alien::Autotools" : "0",
